--- a/week4/trees.Rmd
+++ b/week4/trees.Rmd
@@ -34,19 +34,26 @@ str(stevens)
 
 ```
 
-split the data into train and test sets...
+split the data into Train and Test sets...
 
 ```{r}
 #install.packages("caTools")
 library(caTools)
 set.seed(3000)
 spl = sample.split(stevens$Reverse,SplitRatio=0.7)
-train = subset(stevens,spl)
-test = subset(stevens,!spl)
+Train = subset(stevens,spl)
+Test = subset(stevens,!spl)
 
 ```
 
 ## CART
+
+All of our models are going to use the same independent variables. lets set this once.
+```{r}
+stformula = Reverse ~ Circuit + Issue + Petitioner + Respondent + LowerCourt + Unconst
+
+```
+
 
 Now, we are ready to build our CART model. First we need to install and load the packages rpart and rpart.plot
 
@@ -56,8 +63,10 @@ library(rpart)
 #install.packages("rpart.plot")
 library(rpart.plot)
 
-st = rpart( Reverse ~ Circuit + Issue + Petitioner + Respondent + LowerCourt + Unconst, 
-            data=train,
+
+
+st = rpart( stformula, 
+            data=Train,
             method="class", minbucket=25)
 
 prp(st)
@@ -66,9 +75,9 @@ prp(st)
 Now, let's see how well we did:
 
 ```{r}
-p1 = predict(st, newdata=test, type="class")
-conf = table(test$Reverse,p1)
-accuracy = (conf[1]+conf[4])/nrow(test)
+p1 = predict(st, newdata=Test, type="class")
+conf = table(Test$Reverse,p1)
+accuracy = (conf[1]+conf[4])/nrow(Test)
 print(conf)
 ```
 
@@ -76,8 +85,8 @@ The accuracy is `r accuracy`.
 
 ```{r}
 library(ROCR)
-p2 = predict(st,newdata=test)
-pred = prediction(p2[,2],test$Reverse)
+p2 = predict(st,newdata=Test)
+pred = prediction(p2[,2],Test$Reverse)
 perf = performance(pred,"tpr","fpr")
 plot(perf)
 auc = as.numeric(performance(pred,"auc")@y.values)
@@ -90,12 +99,12 @@ If we increase and decrease the `minbucket` parameter
 ```{r echo=FALSE}
 csplits = function(x){x$cptable[nrow(x$cptable),"nsplit"]}
 
-st5 = rpart( Reverse ~ Circuit + Issue + Petitioner + Respondent + LowerCourt + Unconst, 
-            data=train,
+st5 = rpart(stformula, 
+            data=Train,
             method="class", minbucket=5)
 
-st100 = rpart( Reverse ~ Circuit + Issue + Petitioner + Respondent + LowerCourt + Unconst, 
-            data=train,
+st100 = rpart(stformula, 
+            data=Train,
             method="class", minbucket=100)
 
 ```
@@ -109,14 +118,14 @@ we get minbucket=5 -> `r csplits(st5)` and minbucket=100 -> `r csplits(st100)` s
 library(randomForest)
 
 set.seed(100)
-stevensForest = randomForest(Reverse ~ Circuit + Issue + Petitioner + Respondent + LowerCourt + Unconst, 
-            data=train,
+stevensForest = randomForest(stformula, 
+            data=Train,
             nodesize = 25, ntree = 200)
 
 
-pf = predict(stevensForest, newdata=test)
-conf = table(test$Reverse,pf)
-accuracy = (conf[1]+conf[4])/nrow(test)
+pf = predict(stevensForest, newdata=Test)
+conf = table(Test$Reverse,pf)
+accuracy = (conf[1]+conf[4])/nrow(Test)
 print(conf)
 ```
 
@@ -124,14 +133,50 @@ The accuracy is `r accuracy`.
 
 ```{r}
 set.seed(200)
-stevensForest = randomForest(Reverse ~ Circuit + Issue + Petitioner + Respondent + LowerCourt + Unconst, 
-            data=train,
+stevensForest = randomForest(stformula, 
+            data=Train,
             nodesize = 25, ntree = 200)
 
 
-pf = predict(stevensForest, newdata=test)
-conf = table(test$Reverse,pf)
-accuracy = (conf[1]+conf[4])/nrow(test)
+pf = predict(stevensForest, newdata=Test)
+conf = table(Test$Reverse,pf)
+accuracy = (conf[1]+conf[4])/nrow(Test)
+print(conf)
+```
+
+The accuracy is `r accuracy`.
+
+## k-Fold Cross Validation
+
+```{r}
+#install.packages(c("caret","e1071"))
+library(caret)
+library(e1071)
+
+numFolds = trainControl(method="cv",number=10)
+cpGrid = expand.grid(.cp=seq(0.01,0.5,0.01))
+cvmodels = train(stformula, 
+      data=Train,
+      method="rpart",
+      trControl=numFolds,
+      tuneGrid = cpGrid)
+
+bestcp = cvmodels$bestTune
+```
+
+The best value for tuning the CART model is `r bestcp`. We'll use this create the new CART model.
+
+```{r}
+stevensCV = rpart(stformula,data=Train,method="class",cp=bestcp)
+prp(stevensCV)
+```
+
+This model has `r csplits(stevensCV)` split(s).
+
+```{r}
+p1 = predict(stevensCV, newdata=Test, type="class")
+conf = table(Test$Reverse,p1)
+accuracy = (conf[1]+conf[4])/nrow(Test)
 print(conf)
 ```
 
