--- a/week4/whyvote.Rmd
+++ b/week4/whyvote.Rmd
@@ -95,7 +95,9 @@ prp(mcart3)
 mcart4 = rpart(voting ~ control,data=gerber,cp=0.0)
 mcart5 = rpart(voting ~ control+sex,data=gerber,cp=0.0)
 prp(mcart4,digits=6)
-prp(mcart5,digits=5)
+prp(mcart5,digits=6)
+summary(mcart5)
+c5 = c(0.345818,0.334176,0.302795,0.290456)
 ```
 
 
@@ -111,6 +113,20 @@ summary(m2)
 
 ```{r}
 Possibilities = data.frame(sex=c(0,0,1,1),control=c(0,1,0,1))
-predict(m2, newdata=Possibilities, type="response")
+p2 = predict(m2, newdata=Possibilities, type="response")
+print(abs(c5-p2)[4])
 ```
-0.2908065 - 0.30279
+
+
+## Problem 3.5
+```{r}
+m3 = glm( voting ~ sex+control+sex:control, data = gerber, family="binomial")
+```
+
+## Problem 3.6
+
+```{r}
+p3 = predict(m3, newdata=Possibilities, type="response")
+print(abs(c5-p3)[4])
+
+```
