--- a/week5/wiki.Rmd
+++ b/week5/wiki.Rmd
@@ -32,14 +32,14 @@ corpus = tm_map(corpus,PlainTextDocument)
 corpus = tm_map(corpus,removeWords, stopwords("english"))
 corpus = tm_map(corpus,stemDocument)
 
-dtm = DocumentTermMatrix(corpus)
+dtmA = DocumentTermMatrix(corpus)
 
 ```
 
-Problem 1.2: There are `r ncol(dtm)` terms in the document term matrix
+Problem 1.2: There are `r ncol(dtmA)` terms in the document term matrix
 
 ```{r}
-sparse = removeSparseTerms(dtm,0.997)
+sparse = removeSparseTerms(dtmA,0.997)
 ```
 
 Problem 1.3: There are `r ncol(sparse)` terms in the pruned matrix
@@ -57,9 +57,9 @@ corpus = tm_map(corpus,PlainTextDocument)
 corpus = tm_map(corpus,removeWords, stopwords("english"))
 corpus = tm_map(corpus,stemDocument)
 
-dtm = DocumentTermMatrix(corpus)
+dtmR = DocumentTermMatrix(corpus)
 
-sparse = removeSparseTerms(dtm,0.997)
+sparse = removeSparseTerms(dtmR,0.997)
 
 wordsRemoved = as.data.frame(as.matrix(sparse))
 colnames(wordsRemoved) = paste("R",colnames(wordsRemoved))
@@ -114,4 +114,75 @@ prp(m1)
 m1.splits = m1$cptable[nrow(m1$cptable),'nsplit']
 ```
 Problem 1.7: `r m1.splits` terms
+
+# Using Problem-specific knowledge
+
+```{r}
+ww2 = wikiWords
+ww2$http = ifelse(grepl("http",wiki$Added,fixed=TRUE),1,0)
+clinks = sum(ww2$http)
+```
+Problem 2.1: `r clinks` documents include `http`.
+
+```{r}
+train2 = subset(ww2,split)
+test2 = subset(ww2,!split)
+
+m2 = rpart(Vandal~.,data=train2,method="class")
+
+m2.p = predict(m2,newdata=test2,type="class")
+m2.c = table(test$Vandal,m2.p)
+m2.acc = (m2.c[1,1]+m2.c[2,2])/nrow(test2)
+
+```
+
+
+Problem 2.2: The new CART model has accuracy `r m2.acc`.
+
+```{r}
+
+ww2$NumWordsAdded = rowSums(as.matrix(dtmA))
+ww2$NumWordsRemoved = rowSums(as.matrix(dtmR))
+awa = mean(ww2$NumWordsAdded)
+```
+
+Problem 2.3: Average of `r awa` words added.
+
+```{r}
+train3 = subset(ww2,split)
+test3 = subset(ww2,!split)
+
+m3 = rpart(Vandal~.,data=train3,method="class")
+
+m3.p = predict(m3,newdata=test3,type="class")
+m3.c = table(test$Vandal,m3.p)
+m3.acc = (m3.c[1,1]+m3.c[2,2])/nrow(test3)
+
+```
+
+
+Problem 2.4: The new CART model has accuracy `r m3.acc`.
+
+# Use Non-Textual Data
+
+```{r}
+ww3 = ww2
+ww3$Minor = wiki$Minor
+ww3$Loggedin = wiki$Loggedin
+
+
+train4 = subset(ww3,split)
+test4 = subset(ww3,!split)
+
+m4 = rpart(Vandal~.,data=train4,method="class")
+
+m4.p = predict(m4,newdata=test4,type="class")
+m4.c = table(test$Vandal,m4.p)
+m4.acc = (m4.c[1,1]+m4.c[2,2])/nrow(test4)
+
+```
+Problem 3.1: The new CART model has accuracy `r m4.acc`.
+```{r,echo=FALSE}
+prp(m4)
+```
 
