--- a/week4/hw4p2-identifying-abpr.Rmd
+++ b/week4/hw4p2-identifying-abpr.Rmd
@@ -8,6 +8,14 @@ output: html_document
 This document presents answers to the questions of part two of homework four.
 
 ```{r}
+library(caTools)
+library(rpart)
+library(rpart.plot)
+library(randomForest)
+
+accuracy = function(conf){sum(diag(conf))/sum(conf)}
+
+
 baseurl = "https://courses.edx.org/c4x/MITx/15.071x_2/asset/"
 
 getdata = function(local){
@@ -24,7 +32,7 @@ data = getdata("letters_ABPR.csv")
 data$letter = as.factor(data$letter)
 data$isB = data$letter=="B"
 
-library(caTools)
+
 set.seed(1000)
 spl = sample.split(data$isB,SplitRatio=0.5)
 train = data[spl,]
@@ -45,8 +53,6 @@ baseline accuracy = `r bl.acc`
 
 Problem 1.2:
 ```{r}
-library(rpart)
-library(rpart.plot)
 m1 = rpart(isB~.-letter,data=train,method="class")
 
 m1.pred = predict(m1,newdata=test,type="class")
@@ -57,7 +63,6 @@ model1 accuracy = `r m1.acc`
 
 Problem 1.3:
 ```{r}
-library(randomForest)
 set.seed(1000)
 m2 = randomForest(isB~.-letter,data=train)
 
