--- a/week4/whyvote.Rmd
+++ b/week4/whyvote.Rmd
@@ -5,9 +5,7 @@ date: "Monday, April 06, 2015"
 output: html_document
 ---
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+This document presents answers to the questions in part one of homework four.
 
 ```{r}
 dataurl = "https://courses.edx.org/c4x/MITx/15.071x_2/asset/gerber.csv"
