--- a/week5/clinical_trial.Rmd
+++ b/week5/clinical_trial.Rmd
@@ -5,6 +5,10 @@ date: "04/13/2015"
 output: html_document
 ---
 
+This document presents answers to questions in homework 5 part 2.
+
+# Loading the Data
+
 ```{r,echo=FALSE}
 
 remote = "https://courses.edx.org/c4x/MITx/15.071x_2/asset/clinical_trial.csv"
@@ -13,22 +17,23 @@ if(!file.exists(local)){
   library(downloader)
   download(remote,local)
 }
-CTrial = read.csv(local,stringsAsFactors=F)
-str(CTrial)
+data = read.csv(local,stringsAsFactors=F)
 ```
-
-You can also embed plots, for example:
+problem 1.1: `r nrow(data)`
 
 ```{r}
-CTrial$l1 = nchar(CTrial$abstract)
-table(CTrial$l1)
-
-CTrial$l2 = nchar(CTrial$title)
-table(CTrial$l2)
-CTrial[which.min(CTrial$l2),"title"]
+data$l1 = nchar(data$abstract)
 ```
 
-# Problem 2
+problem 1.2: `r sum(data$l1==0)`
+
+```{r}
+data$l2 = nchar(data$title)
+```
+problemt 1.3: `r data[which.min(data$l2),"title"]`
+
+
+# Preparing the Corpus
 
 ```{r}
 library(tm)
@@ -43,31 +48,36 @@ pre.corp = function(text){
   corpus
 }
 
-corpT = pre.corp(CTrial$title)
+corpT = pre.corp(data$title)
 dtmT = as.data.frame(as.matrix(removeSparseTerms(DocumentTermMatrix(corpT),0.95)))
-ncol(dtmT)
-corpA = pre.corp(CTrial$abstract)
-dtmA = as.data.frame(as.matrix(removeSparseTerms(DocumentTermMatrix(corpA),0.95)))
-ncol(dtmA)
-```
 
+corpA = pre.corp(data$abstract)
+dtmA = as.data.frame(as.matrix(removeSparseTerms(DocumentTermMatrix(corpA),0.95)))
+```
+problem 2.1: 
+title words= `r ncol(dtmT)` abstract words= `r ncol(dtmA)`
+
+## Building a Model
 
 ```{r}
 colnames(dtmT) = paste0("T",colnames(dtmT)) 
 colnames(dtmA) = paste0("A",colnames(dtmA)) 
+rownames(dtmT) == rownames(dtmA)
+
 dtm = cbind(dtmT,dtmA)
-dtm$trial = CTrial$trial
+dtm$trial = data$trial
 ```
 
 Problem 3.2: `r ncol(dtm)` columns
 
-## Split into training and testing sets
+split into training and testing sets
 
 ```{r}
 library(caTools)
+set.seed(144)
 spl = sample.split(dtm$trial,SplitRatio=.7)
-train = subset(dtm,spl)
-test = subset(dtm,!spl)
+train = dtm[spl,]
+test = dtm[!spl,]
 ```
 
 baseline model
@@ -77,6 +87,7 @@ baseline = ifelse(mean(train$trial)<.5,0,1)
 bl.c = table(test$trial)
 bl.acc = bl.c[1+baseline]/nrow(test)
 ```
+problem 3.3: accuracy of baseline model=`r bl.acc`
 
 Build a CART model
 
@@ -85,14 +96,17 @@ library(rpart)
 library(rpart.plot)
 
 m1 = rpart(trial~.,data=train,method="class")
+```
+
+problem 3.4:
+```{r}
 prp(m1)
 ```
 
 ```{r}
-p1 = predict(m1)
-str(p1)
-max(p1[,2])
+m1.pred = predict(m1)
 ```
+problem 3.5: `r max(m1.pred[,2])`
 
 
 ```{r}
@@ -104,6 +118,17 @@ m1.senst = m1.ct[2,2]/(m1.ct[2,1]+m1.ct[2,2])
 m1.spect = m1.ct[1,1]/(m1.ct[1,1]+m1.ct[1,2])
 ```
 
+
+problem 3.7:
+
+var                      |value
+---------------------    |-----
+training set accuracy    |`r m1.acct`
+training set sensitivity |`r m1.senst`
+training set specificity |`r m1.spect`
+
+## Evaluating the Model on the Testing Set
+
 ```{r}
 N = nrow(test)
 m1.p = predict(m1,newdata=test,type="class")
@@ -112,3 +137,23 @@ m1.acc = (m1.c[1,1]+m1.c[2,2])/N
 m1.sens = m1.c[2,2]/(m1.c[2,1]+m1.c[2,2])
 m1.spec = m1.c[1,1]/(m1.c[1,1]+m1.c[1,2])
 ```
+
+problem 4.1:
+
+var                      |value
+---------------------    |-----
+testing set accuracy     |`r m1.acc`
+testing set sensitivity  |`r m1.sens`
+testing set specificity  |`r m1.spec`
+
+
+```{r}
+library(ROCR)
+m1.pred = predict(m1,newdata=test)
+m1.roc = prediction(m1.pred[,2],test$trial)
+plot(performance(m1.roc,"tpr","fpr")
+     ,colorize=T,print.cutoffs.at = seq(0,1,0.1),text.adj=c(-0.2,1.7))
+m1.auc = as.numeric(performance(m1.roc,"auc")@y.values)
+```
+problem 4.2: area under curve (auc) = `r m1.auc`
+
